[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", features = [] }
nom-supreme = "0.8.0"
rayon = "1.8.0"
indicatif = "0.17.7"
itertools = "0.12.0"